# computational-qr

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
computational_qr/: __init__.py
computational_qr/comms/: __init__.py  capsule.py  i2p_transport.py  qr_transport.py  wifi_transport.py
computational_qr/core/: __init__.py  color_geometry.py  dependency_viz.py  formula_parser.py  grouping_policy.py  qr_encoder.py
computational_qr/database/: __init__.py  neo4j_store.py  postgis_store.py  relational_store.py  spatial_models.py
computational_qr/graphs/: __init__.py  dependency_graph.py  graph_3d.py
computational_qr/media/: __init__.py  audio_qr.py  video_qr.py
computational_qr/numberstation/: __init__.py  capsule.py  e11_script.py  ffmpeg.py  render.py
computational_qr/prolog/: __init__.py  prolog_engine.py  prolog_qr.py
computational_qr/quantum/: __init__.py  quantum_math.py
computational_qr/schemas/: e11-qr-message.v1.schema.json  numberstations-capsule.v2.schema.json
docs/: native-server-fallback.md
migrations/: env.py
rust/quantum_engine/: Cargo.toml
rust/quantum_engine/src/: engine.rs  gates.rs  lib.rs  schema.rs
tests/: test_audio_qr.py  test_capsule.py  test_color_geometry.py  test_comms_capsule.py  test_comms_i2p_transport.py  test_comms_qr_transport.py  test_comms_wifi_transport.py  test_dependency_graph.py  test_e11_script.py  test_graph_3d.py  test_neo4j_store.py  test_postgis_store.py  test_prolog.py  test_qr_encoder.py  test_quantum_math.py  test_relational_store.py  test_video_qr.py  test_wasm_parity.py
(+8 files in other folders)
