[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "computational-qr"
version = "0.1.0"
description = "QR as a computational medium using color geometry, 3D graphs, a graph database, and quantum math"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "qrcode[pil]>=7.4",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "svgwrite>=1.4",
    "neo4j>=5.14",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "unittest-mock>=0.4",
]
orm = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]
postgres = [
    "psycopg[binary]>=3.2",
]
postgis = [
    "geoalchemy2>=0.15",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["computational_qr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
