[package]
name = "quantum_engine"
version = "0.1.0"
edition = "2021"
description = "Rust→WASM quantum gate-sequence simulation engine for computational-qr"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"   # optimise for size in WASM
